fix comment overflow
small change to hopefully mitigate the scroll problems on smaller device ratios

--- a/Assets/styles/forum.css
+++ b/Assets/styles/forum.css
@@ -57,7 +57,7 @@ body {
 }
 
 .comment-list, #reply {
-  width: 100vmin;
+  width: 97vmin;
 }
 
 .comment-top {
